# unipolator

./: .gitignore  LICENSE  MANIFEST.in  Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.c  setup.cfg  setup.py  test.txt
.github/workflows/: python-package.yml
coverage/: lcov.info
src/unipolator/: __init__.c  __init__.py  autobinning.py  blas_functions.c  blas_functions.cp310-win_amd64.pyd  blas_functions.cp311-win_amd64.pyd  blas_functions.cp39-win_amd64.pyd  blas_functions.html  blas_functions.pxd  blas_functions.pyx  blas_functions_vectors.c  blas_functions_vectors.cp310-win_amd64.pyd  blas_functions_vectors.cp311-win_amd64.pyd  blas_functions_vectors.cp39-win_amd64.pyd  blas_functions_vectors.pxd  blas_functions_vectors.pyx  caching.c  caching.cp310-win_amd64.pyd  caching.cp311-win_amd64.pyd  caching.cp39-win_amd64.pyd  caching.html  caching.pxd  caching.pyx  exp_and_log.c  exp_and_log.cp310-win_amd64.pyd  exp_and_log.cp311-win_amd64.pyd  exp_and_log.cp39-win_amd64.pyd  exp_and_log.html  exp_and_log.pxd  exp_and_log.pyx  hamiltonian_system.c  hamiltonian_system.cp310-win_amd64.pyd  hamiltonian_system.cp311-win_amd64.pyd  hamiltonian_system.cp39-win_amd64.pyd  hamiltonian_system.html  hamiltonian_system.pyx  hamiltonian_system_vector.c  hamiltonian_system_vector.cp310-win_amd64.pyd  hamiltonian_system_vector.cp311-win_amd64.pyd  hamiltonian_system_vector.cp39-win_amd64.pyd  (+59 more)
test/: Average_Infidelity_Integrator.py  BCH_UI_expansion.ipynb  analytical_integration_vector_functions.py  average_infidelity.py  test.ipynb  test_basics.py  test_run_short.py  test_ui.py  test_ui_behaviour.ipynb  test_ui_behaviour_1.ipynb  test_ui_behaviour_2.ipynb  test_ui_behaviour_gpu.ipynb  test_ui_behaviour_states.ipynb  test_ui_package.py  time2Infidelity.py  time2Infidelity2.py  time2Infidelity_iff.py  time2Infidelity_pgi.py  time2Infidelity_states.py  time4dim.py  time4dim_iff.py  time4dim_pgi.py
test/Analysis_Code/: README.md  (+6 more)
(+957 files in other folders)
