[metadata]
name = unipolator
version = 0.1
author = Michael Schilling
author_email = michael@ntropic.de
description  = Unipolator allows for n dimensional unitary interpolation, and the calculation of propagators using unitary interpolation. Speeds up your propagators for linear quantum systems.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Ntropic/unipolatorarchive/refs/tags/v0.1.tar.gz
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: Implementation :: CPython
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
zip_safe = False
python_requires = >=3.4
package_dir = =src
packages = find:

[options.packages.find]
where = src

[options.package_data]
* = *.pxd, *.h