[metadata]
name = unipolator
version          = 0.3.0
author = Michael Schilling
author_email = michael@ntropic.de
description  = Unipolator allows for n dimensional unitary interpolation, and the calculation of propagators using unitary interpolation. Speeds up your propagators for linear quantum systems.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Ntropic/unipolator
download_url = https://github.com/Ntropic/unipolator/archive/refs/tags/v0.3.0.tar.gz
Programming Language :: Python :: 3
    Programming Language :: Python :: Implementation :: CPython
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
zip_safe = False
python_requires = >=3.4
package_dir = =src
packages = find:

#exclude test folder
[options.packages.find]
where = src
exclude = test

[options.package_data]
* = *.pxd, *.h, *.pyx